--- a/CUSTOMER-SERVICE.properties
+++ b/CUSTOMER-SERVICE.properties
@@ -2,7 +2,8 @@ server.port=8082
 #spring.h2.console.enabled=true
 #spring.h2.console.settings.web-allow-others=true
 #spring.datasource.url=jdbc:h2:mem:customer-db
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/customer-db?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/customer-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysqlFacture}:${MYSQL_PORT:3306}/customer-db?createDatabaseIfNotExist=true
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
