--- a/application.properties
+++ b/application.properties
@@ -6,3 +6,7 @@ eureka.client.fetch-registry=true
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.service-url.defaultZone=http://eurekaFacture:8761/eureka/
 eureka.instance.prefer-ip-address=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
