--- a/application.properties
+++ b/application.properties
@@ -4,7 +4,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 #eureka.client.service-url.defaultZone=https://eureka-service-ms.herokuapp.com/eureka/
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.service-url.defaultZone=http://eurekaFacture:8761/eureka/
+eureka.client.service-url.defaultZone=http://eurekaFacture/eureka/
 eureka.instance.prefer-ip-address=true
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:root}
