config avec docker compose 4

--- a/CUSTOMER-SERVICE.properties
+++ b/CUSTOMER-SERVICE.properties
@@ -3,7 +3,7 @@ server.port=8082
 #spring.h2.console.settings.web-allow-others=true
 #spring.datasource.url=jdbc:h2:mem:customer-db
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/customer-db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysqlFacture}:${MYSQL_PORT:3306}/customer-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqlFacture/customer-db?createDatabaseIfNotExist=true
 configs-customer.SECRET=bk@Browndon_1234
 configs-customer.AUTH_HEADER=Authorization
 configs-customer.AUTH_HEADER_PREFIX=Bearer
