--- a/BILLING-SERVICE.properties
+++ b/BILLING-SERVICE.properties
@@ -3,11 +3,11 @@ server.port=8084
 #spring.h2.console.settings.web-allow-others=true
 #spring.datasource.url=jdbc:h2:mem:billing-db
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/billing-db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysqlFacture}:${MYSQL_PORT:3306}/billing-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqlFacture/billing-db?createDatabaseIfNotExist=true
 configs-billing.SECRET=bk@Browndon_1234
 configs-billing.AUTH_HEADER=Authorization
 configs-billing.AUTH_HEADER_PREFIX=Bearer
 #configs-billing.CUSTOMER_LINK=http://localhost:8082
 #configs-billing.INVENTORY_LINK=http://localhost:8083
-configs-billing.CUSTOMER_LINK=http://customerFacture:8082
-configs-billing.INVENTORY_LINK=http://inventotyFacture:8083
+configs-billing.CUSTOMER_LINK=customerFacture
+configs-billing.INVENTORY_LINK=inventotyFacture
