--- a/INVENTORY-SERVICE.properties
+++ b/INVENTORY-SERVICE.properties
@@ -3,7 +3,7 @@ server.port=8083
 #spring.h2.console.settings.web-allow-others=true
 #spring.datasource.url=jdbc:h2:mem:inventory-db
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/inventory-db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysqlFacture}:${MYSQL_PORT:3306}/inventory-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqlFacture/inventory-db?createDatabaseIfNotExist=true
 configs-inventory.SECRET=bk@Browndon_1234
 configs-inventory.AUTH_HEADER=Authorization
 configs-inventory.AUTH_HEADER_PREFIX=Bearer
