--- a/SECURITY-SERVICE.properties
+++ b/SECURITY-SERVICE.properties
@@ -3,7 +3,7 @@ server.port=8085
 #spring.h2.console.settings.web-allow-others=true
 #spring.datasource.url=jdbc:h2:mem:security-db
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/security-db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysqlFacture}:${MYSQL_PORT:3306}/security-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqlFacture/security-db?createDatabaseIfNotExist=true
 configs-security.SECRET=bk@Browndon_1234
 configs-security.AUTH_HEADER=Authorization
 configs-security.AUTH_HEADER_PREFIX=Bearer
