--- a/BILLING-SERVICE.properties
+++ b/BILLING-SERVICE.properties
@@ -4,10 +4,14 @@ server.port=8084
 #spring.datasource.url=jdbc:h2:mem:billing-db
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/billing-db?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://mysqlFacture/billing-db?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 configs-billing.SECRET=bk@Browndon_1234
 configs-billing.AUTH_HEADER=Authorization
 configs-billing.AUTH_HEADER_PREFIX=Bearer
 #configs-billing.CUSTOMER_LINK=http://localhost:8082
 #configs-billing.INVENTORY_LINK=http://localhost:8083
 configs-billing.CUSTOMER_LINK=customerFacture
-configs-billing.INVENTORY_LINK=inventotyFacture
+configs-billing.INVENTORY_LINK=inventoryFacture
