--- a/CUSTOMER-SERVICE.properties
+++ b/CUSTOMER-SERVICE.properties
@@ -4,6 +4,10 @@ server.port=8082
 #spring.datasource.url=jdbc:h2:mem:customer-db
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/customer-db?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://mysqlFacture/customer-db?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 configs-customer.SECRET=bk@Browndon_1234
 configs-customer.AUTH_HEADER=Authorization
 configs-customer.AUTH_HEADER_PREFIX=Bearer
