--- a/INVENTORY-SERVICE.properties
+++ b/INVENTORY-SERVICE.properties
@@ -4,6 +4,10 @@ server.port=8083
 #spring.datasource.url=jdbc:h2:mem:inventory-db
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/inventory-db?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://mysqlFacture/inventory-db?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 configs-inventory.SECRET=bk@Browndon_1234
 configs-inventory.AUTH_HEADER=Authorization
 configs-inventory.AUTH_HEADER_PREFIX=Bearer
