--- a/SECURITY-SERVICE.properties
+++ b/SECURITY-SERVICE.properties
@@ -4,6 +4,10 @@ server.port=8085
 #spring.datasource.url=jdbc:h2:mem:security-db
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/security-db?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://mysqlFacture/security-db?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 configs-security.SECRET=bk@Browndon_1234
 configs-security.AUTH_HEADER=Authorization
 configs-security.AUTH_HEADER_PREFIX=Bearer
