--- a/BILLING-SERVICE.properties
+++ b/BILLING-SERVICE.properties
@@ -3,7 +3,7 @@ server.port=8084
 #spring.h2.console.settings.web-allow-others=true
 #spring.datasource.url=jdbc:h2:mem:billing-db
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/billing-db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://mysqlFacture/billing-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysqlFacture}:${MYSQL_PORT:3306}/billing-db?createDatabaseIfNotExist=true
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=update
