--- a/application.properties
+++ b/application.properties
@@ -4,5 +4,5 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 #eureka.client.service-url.defaultZone=https://eureka-service-ms.herokuapp.com/eureka/
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.service-url.defaultZone=eurekaFacture
+eureka.client.service-url.defaultZone=http://eurekaFacture:8761/eureka/
 eureka.instance.prefer-ip-address=true
