config avec docker compose 7

--- a/BILLING-SERVICE.properties
+++ b/BILLING-SERVICE.properties
@@ -13,5 +13,5 @@ configs-billing.AUTH_HEADER=Authorization
 configs-billing.AUTH_HEADER_PREFIX=Bearer
 #configs-billing.CUSTOMER_LINK=http://localhost:8082
 #configs-billing.INVENTORY_LINK=http://localhost:8083
-configs-billing.CUSTOMER_LINK=customerFacture
-configs-billing.INVENTORY_LINK=inventoryFacture
+configs-billing.CUSTOMER_LINK=http://customerFacture:8082
+configs-billing.INVENTORY_LINK=http://inventoryFacture:8083
